# localmind

./: .env.example  .gitignore  ANALYSIS_AND_SOLUTIONS.md  CHAT_BEHAVIOR_INVESTIGATION.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  LICENSE  README.md  agent_system_optimization_analysis.md  debug_math.py  direct_math_test.py  localmind.md  pyproject.toml  quick_diagnostic.py  server.py  simple_test.py  system_architecture_insights.md  test_chat_performance.py  test_cold_start.py  test_engine_direct.py  test_engine_flow.py  test_llm_direct.py  test_with_logs.py  training_local_llm_strategy.md  vector_database_strategy.md
adapters/: __init__.py  base.py  ollama.py
api/: __init__.py  app.py
api/routes/: chat.py  filesystem.py  health.py  memory.py  models.py  ollama.py  sessions.py
cli/: __init__.py  main.py
cli/commands/: __init__.py  ask.py  chat.py  health.py  models.py  sessions.py  start.py
core/: __init__.py  agent.py  agent.py.bak  config.py  context_builder.py  engine.py  filters.py  flywheel.py  intent_classifier.py  intent_router.py  intent_router_v2.py  memory.py  metrics.py  model_router.py  models.py  obs.py  safety_gate.py  semantic_classifier.py  summarizer.py  title_generator.py  tool_scorer.py
core/agent/: __init__.py  agent_filters.py  constants.py  loop.py  models.py  prompts.py  search.py  tool_dispatch.py
core/prompts/: base.md  chat.md  code_exec.md  file_task.md  file_write.md  greeting.md  memory_op.md  shell.md  sysinfo.md  web_search.md
core/workspace/: __init__.py  manager.py  orchestrator.py
docs/: ARCHITECTURE.md  PRD.md  SEMANTIC_CLASSIFICATION.md  shell_tool_fix_analysis.md  tools_architecture_proposal.md  tools_improvement_proposal.md  vector_store_optimization.md  web_search_analysis.md
docs/stories/: v0.1-story-1-file-reader.md
localmind_output/: localmind_output_1775488182.txt
scripts/: backup_project.ps1  janitor.py  reset_vector_db.py  seed_memory.py  setup_semantic.py
storage/: __init__.py  db.py  vector.py
storage/migrations/: 001_initial.sql  002_tool_stats.sql  003_add_session_titles.sql  004_add_file_columns.sql  005_sqlite_vec_memory.sql
tests/: conftest.py
tests/adapters/: test_ollama.py
tests/api/: test_chat.py
tests/core/: test_context_builder.py  test_intent_router.py  test_v02.py
tests/storage/: test_db.py
tests/tools/: test_code_executor.py  test_code_executor_sandbox.py  test_file_reader.py  test_web_search.py
tools/: __init__.py  base.py  code_exec.py  file_reader.py  file_writer.py  installed_programs.py  memory.py  memory_tool.py  shell.py  sysinfo.py  web_search.py
tools/code_executor/: __init__.py  detector.py  runner.py  sandbox.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx
ui/src/components/: BootSplash.jsx  ChatInput.jsx  ErrorBanner.jsx  FileUpload.jsx  MessageList.jsx  Sidebar.jsx  (+2 more)
(+4 files in other folders)
