[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localmind"
version = "0.1.0-dev"
description = "Make local AI work like Claude — file reading, web search, memory, and tool use on top of Ollama"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Tisone Kironget", email = "tisone@skytechsolutions.dev" }
]
keywords = ["ollama", "llm", "local-ai", "rag", "tool-use", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # API layer
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # LLM communication
    "httpx>=0.27.0",

    # File parsing
    "pymupdf>=1.24.0",          # PDF
    "python-docx>=1.1.0",       # DOCX
    "pandas>=2.2.0",            # CSV / Excel
    "openpyxl>=3.1.0",          # Excel support for pandas
    "pillow>=10.0.0",           # Image processing
    "pytesseract>=0.3.10",      # OCR text extraction
    "transformers>=4.40.0",     # Vision models
    "torch>=2.3.0",             # PyTorch for vision models

    # Web search
    "ddgs>=6.1.0",

    # Memory / Storage
    "chromadb>=0.5.0",

    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    "tiktoken>=0.7.0",          # Token counting
    "numpy>=1.24.0",            # Required for semantic similarity calculations
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",            # For FastAPI test client
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
semantic = [
    "sentence-transformers>=2.7.0",  # Semantic embeddings for intent classification
]

[project.scripts]
localmind = "cli.main:app"

[project.urls]
Homepage = "https://github.com/TisoneK/localmind"
Repository = "https://github.com/TisoneK/localmind"
Issues = "https://github.com/TisoneK/localmind/issues"

[tool.hatch.build.targets.wheel]
packages = ["core", "tools", "adapters", "api", "storage", "cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
